# paskaita-gen-ai

./: info.md  main.py  plan.md  pyproject.toml  urs.txt
examples/2/: openai_client_v1.py  openai_client_v2.py
examples/3_notebooks + openai-client/: simplified_RAG.py
examples/4_rag/: birzai-pasvalys-chatbot.ipynb
examples/5/streamlit-chatbot/: info.txt  main2.py
examples/5_streamlit-chatbot/: README.md  main.py  pyproject.toml
examples/7_function-calling/: function-calling.ipynb  main.py
homework/: nd-1.txt  nd-2.txt  nd-3.txt  nd-5.txt  nd-6.txt
week_1/day_1/info/: python basics.txt
week_1/day_1/nd/: nd_1.py
week_1/day_2/openai_client/: github_model_openai_v3.py
